--- a/jobscheduler/templates/jobscheduler_navbar.jinja2
+++ b/jobscheduler/templates/jobscheduler_navbar.jinja2
@@ -1,1 +1,1 @@
-<a href="#" data-bind="attr: {href: settings.settings.plugins.jobscheduler.url}">Job Scheduler!</a>
+<a href="#" data-bind="attr: {href: settings.settings.plugins.jobscheduler.url}" target="foto">Job Scheduler!</a>
