--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -1,18 +1,18 @@
 <form class="form-horizontal">
   <div class="control-group">
-      <label class="control-label"><i class="fa fa-camera"></label>
+      <label class="control-label"><i class="fa fa-camera"></i></label>
       <div class="controls">
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.url">
       </div>
   </div>
   <div class="control-group">
-      <label class="control-label"><i class="fa fa-sun-o"></label>
+      <label class="control-label"><i class="fa fa-sun-o"></i></label>
       <div class="controls">
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.day">
       </div>
   </div>
   <div class="control-group">
-      <label class="control-label"><i class="fa fa-moon-o"></label>
+      <label class="control-label"><i class="fa fa-moon-o"></i></label>
       <div class="controls">
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.night">
       </div>
