--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -5,13 +5,13 @@
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.url">
       </div>
   </div>
-  <div class="control-group">
+  <div class="control-group col-3">
       <label class="control-label"><i class="fa fa-sun-o"></i></label>
       <div class="controls">
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.day">
       </div>
   </div>
-  <div class="control-group">
+  <div class="control-group col-3">
       <label class="control-label"><i class="fa fa-moon-o"></i></label>
       <div class="controls">
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.night">
