--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -17,4 +17,14 @@
           <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.night">
       </div>
   </div>
+
+  <div class="row">
+  <div class="col-xs-5">
+  <input type="text" class="form-control" placeholder=".col-xs-5">
+  </div>
+  <div class="col-xs-3">
+  <input type="text" class="form-control" placeholder=".col-xs-3">
+  </div>
+  </div>
+
 </form>
