--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -18,13 +18,15 @@
       </div>
   </div>
 
-  <div class="row">
-  <div class="col-xs-5">
-  <input type="text" class="form-control" placeholder=".col-xs-5">
-  </div>
-  <div class="col-xs-3">
-  <input type="text" class="form-control" placeholder=".col-xs-3">
-  </div>
+  <div class="form-row mb-4">
+      <div class="col">
+          <!-- First name -->
+          <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+      </div>
+      <div class="col">
+          <!-- Last name -->
+          <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+      </div>
   </div>
 
 </form>
