--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -19,14 +19,14 @@
   </div>
 
 
-  <div class="form-row mb-4">
+  <div class="form-row">
       <div class="col">
           <!-- First name -->
-          <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+          <input type="text" id="defaultRegisterFormFirstName" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.day">
       </div>
       <div class="col">
           <!-- Last name -->
-          <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+          <input type="text" id="defaultRegisterFormLastName" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.night">
       </div>
   </div>
 
