--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -20,11 +20,11 @@
 
 
   <div class="form-row">
-      <div class="col">
+      <div class="col-md-4">
           <!-- First name -->
           <input type="text" id="defaultRegisterFormFirstName" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.day">
       </div>
-      <div class="col">
+      <div class="col-md-4">
           <!-- Last name -->
           <input type="text" id="defaultRegisterFormLastName" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.night">
       </div>
