update settings page

--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -1,4 +1,9 @@
 <form class="form-horizontal">
+  <h3>Job scheduling and pausing over nigth</h3>
+  <ul>
+    <li>Specify job start time for the currently selected GCODE file</li>
+    <li>Specify day working time (pause on night)</li>
+  </ul>
   <div class="control-group">
       <label class="control-label"><i class="fa fa-camera"></i></label>
       <div class="controls">
