--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -3,7 +3,10 @@
   <h4>Specify job start time for the currently selected GCODE file</h4>
   <div class="control-group col-3">
     <div class="checkbox">
-      <label class="control-label"><input type="checkbox" value="">Enable scheduled print job</label>
+      <label class="control-label">Enable scheduled print job</label>
+      <div class="controls">
+        <input type="checkbox" value="">
+      </div>
     </div>
     <label class="control-label"><i class="fa fa-play"></i></label>
     <div class="controls">
