--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -1,6 +1,6 @@
 <form class="form-horizontal">
   <h3>Job scheduling and pausing over nigth</h3>
-  <h4>Specify job start time for the currently selected GCODE file</h4>
+  <p>Specify job start time for the currently selected GCODE file</p>
   <div class="control-group col-3">
     <div class="checkbox">
       <label class="control-label">Enable scheduled print job</label>
@@ -8,6 +8,8 @@
         <input type="checkbox" value="">
       </div>
     </div>
+  </div>
+  <div class="control-group col-3">
     <label class="control-label"><i class="fa fa-play"></i></label>
     <div class="controls">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start">
