--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -2,19 +2,19 @@
   <h3>Job scheduling and pausing over nigth</h3>
   <div class="controls">
     <label class="checkbox">Enable</label>
-    <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pluginenabled">
+    <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pluginenabled"/>
   </div>
 
   <h3>Settings</h3>
   <div class="control-group">
     <label class="checkbox">Enable scheduled print job</label>
     <div class="controls">
-      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.startenabled">
+      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.startenabled"/>
     </div>
 
     <label class="control-label"><i class="fa fa-play"></i></label>
     <div class="controls">
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start">
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start"/>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
   <div class="control-group">
     <label class="checkbox">Enable pause over night</label>
     <div class="controls">
-      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled">
+      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
     </div>
 
     <label class="control-label"><i class="fa fa-sun-o"></i></label>
