--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -1,8 +1,9 @@
 <form class="form-horizontal">
-  <h3>Job scheduling and pausing over nigth</h3>
+  <h2>Job scheduling and pausing over nigth</h2>
   <div class="controls">
-    <label class="checkbox">Enable</label>
-    <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pluginenabled"/>
+    <label class="checkbox">
+      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pluginenabled"/>
+    Enable</label>
   </div>
 
   <h3>Settings</h3>
