--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -2,20 +2,22 @@
   <h2>Job scheduling and pausing over nigth</h2>
   <div class="controls">
     <label class="checkbox">
-      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pluginenabled"/>
+    <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pluginenabled"/>
     Enable</label>
   </div>
 
   <h3>Settings</h3>
   <div class="control-group">
-    <label class="checkbox">Enable scheduled print job</label>
     <div class="controls">
+      <label class="checkbox">
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.startenabled"/>
+      Enable scheduled print job</label>
     </div>
 
-    <label class="control-label"><i class="fa fa-play"></i></label>
     <div class="controls">
+      <label class="control-label">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start"/>
+      <i class="fa fa-play"></i></label>
     </div>
   </div>
 
