--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -15,9 +15,9 @@
     </div>
 
     <div class="controls">
-      <label class="control-label">
+      <label class="control-label"><i class="fa fa-play"></i>
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start"/>
-      <i class="fa fa-play"></i></label>
+      </label>
     </div>
   </div>
 
