--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -15,17 +15,17 @@
     </div>
 
     <div class="controls">
-      <label class="control-label"><i class="fa fa-play"></i>
+      <label class="control-label"><i class="fa fa-play"></i></label>
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start"/>
-      </label>
     </div>
   </div>
 
   <h3>Specify day working time (pause on night)</h3>
   <div class="control-group">
-    <label class="checkbox">Enable pause over night</label>
     <div class="controls">
+      <label class="checkbox">
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
+      Enable pause over night</label>
     </div>
 
     <label class="control-label"><i class="fa fa-sun-o"></i></label>
