--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -16,7 +16,7 @@
 
     <label class="control-label"><i class="fa fa-play"></i></label>
     <div class="controls">
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.start"/>
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.starttime"/>
     </div>
   </div>
 
@@ -30,12 +30,31 @@
 
     <label class="control-label"><i class="fa fa-sun-o"></i></label>
     <div class="controls">
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.day">
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
 
     <label class="control-label"><i class="fa fa-moon-o"></i></label>
     <div class="controls">
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.night">
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pausenight">
+    </div>
+  </div>
+
+  <h3>Telegram messages</h3>
+  <div class="control-group">
+    <div class="controls">
+      <label class="checkbox">
+      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
+      <i class="fa fa-telegram"></i>Enable telegram messaging</label>
+    </div>
+
+    <label class="control-label"><i class="fa fa-key"></i></label>
+    <div class="controls">
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+    </div>
+
+    <label class="control-label"><i class="fa fa-user-o"></i></label>
+    <div class="controls">
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
     </div>
   </div>
 
