--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -39,12 +39,12 @@
     </div>
   </div>
 
-  <h3>Telegram messages</h3>
+  <h3><i class="fa fa-telegram"></i> Telegram messages</h3>
   <div class="control-group">
     <div class="controls">
       <label class="checkbox">
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
-      <i class="fa fa-telegram"></i>Enable telegram messaging</label>
+      Enable telegram messaging</label>
     </div>
 
     <label class="control-label"><i class="fa fa-key"></i></label>
