--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -1,5 +1,5 @@
 <form class="form-horizontal">
-  <h3>Job scheduling and pausing over nigth</h3>
+  <h3>Job scheduling and pausing over night</h3>
 
   <h4>Settings</h4>
   <div class="control-group">
