--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -23,7 +23,7 @@
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
       Enable pause over night</label>
     </div>
-
+<!--
     <label class="control-label"><i class="fa fa-sun-o"></i></label>
     <div class="controls">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pauseday">
@@ -33,7 +33,20 @@
     <div class="controls">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
+-->
   </div>
+
+  <div class="row-fluid">
+    <div class="offset1 span1"><i class="fa fa-sun-o"></i></div>
+    <div class="span"2>
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pauseday">
+    </div>
+    <div class="offset2 span1"><i class="fa fa-moon-o"></i></div>
+    <div class="span"2>
+      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pausenight">
+    </div>
+  </div>
+
 
   <h4><i class="fa fa-telegram"></i> Telegram messages</h4>
   <div class="control-group">
