--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -20,7 +20,7 @@
   <div class="control-group">
     <div class="controls">
       <label class="checkbox">
-      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
+      <input type="checkbox" data-bind="unchecked: settings.plugins.jobscheduler.pauseenabled"/>
       Enable pause over night</label>
     </div>
 <!--
