--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -20,7 +20,7 @@
   <div class="control-group">
     <div class="controls">
       <label class="checkbox">
-      <input type="checkbox" data-bind="unchecked: settings.plugins.jobscheduler.pauseenabled"/>
+      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
       Enable pause over night</label>
     </div>
 <!--
@@ -39,7 +39,7 @@
   <div class="row-fluid">
     <div class="offset1 span1"><i class="fa fa-sun-o"></i></div>
     <div class="span"2>
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pauseday">
+      <input type="text" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
     <div class="offset2 span1"><i class="fa fa-moon-o"></i></div>
     <div class="span"2>
