--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -43,7 +43,7 @@
     </div>
     <div class="offset2 span1"><i class="fa fa-moon-o"></i></div>
     <div class="span"2>
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pausenight">
+      <input type="text" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
   </div>
 
