--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -17,13 +17,13 @@
   </div>
 
   <h4>Specify day working time (pause on night)</h4>
+  <!--
   <div class="control-group">
     <div class="controls">
       <label class="checkbox">
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
       Enable pause over night</label>
     </div>
-<!--
     <label class="control-label"><i class="fa fa-sun-o"></i></label>
     <div class="controls">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pauseday">
@@ -33,16 +33,21 @@
     <div class="controls">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
--->
   </div>
+  -->
 
   <div class="row-fluid">
+    <div class="offset2 span10">
+      <label class="checkbox">
+      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
+      Enable pause over night</label>
+    </div>
     <div class="offset1 span1"><i class="fa fa-sun-o"></i></div>
-    <div class="span"2>
+    <div class="span2">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
     <div class="offset2 span1"><i class="fa fa-moon-o"></i></div>
-    <div class="span"2>
+    <div class="span2">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
   </div>
