--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -18,16 +18,16 @@
 
   <h4>Specify day working time (pause on night)</h4>
   <div class="row-fluid">
-    <div class="offset2 span10">
+    <div class="span2">
       <label class="checkbox">
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
-      Enable pause over night</label>
+      Enable</label>
     </div>
-    <div class="offset1 span1"><i class="fa fa-sun-o right"></i></div>
+    <div class="offset3 span1"><i class="fa fa-sun-o fa-2x right"></i></div>
     <div class="span1">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
-    <div class="offset3 span1"><i class="fa fa-moon-o right"></i></div>
+    <div class="offset3 span1"><i class="fa fa-moon-o fa-2x right"></i></div>
     <div class="span1">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
