--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -19,9 +19,8 @@
   <h4>Specify day working time (pause on night)</h4>
   <div class="row-fluid">
     <div class="span1">
-      <label class="checkbox">
       <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
-      Enable</label>
+      Enable
     </div>
     <div class="offset1 span1"><i class="fa fa-sun-o fa-2x right"></i></div>
     <div class="span2">
