--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -22,14 +22,12 @@
     Specify day working time (pause on night)</label>
   </h4>
   <div class="row-fluid">
-    <div class="span1">
-    </div>
-    <div class="offset1 span1"><i class="fa fa-sun-o fa-2x right"></i></div>
-    <div class="span2">
+    <div class="span1"><i class="fa fa-sun-o fa-2x right"></i></div>
+    <div class="span3">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
-    <div class="offset1 span1"><i class="fa fa-moon-o fa-2x right"></i></div>
-    <div class="span2">
+    <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right"></i></div>
+    <div class="span3">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
   </div>
