--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -1,6 +1,6 @@
 <form class="form-horizontal">
 
-  <h3>Job scheduling and pausing over night</h3>
+  <h3 class="blu">Job scheduling and pausing over night</h3>
 
   <h4>Settings</h4>
   <div class="control-group">
@@ -10,23 +10,22 @@
       Enable scheduled print job</label>
     </div>
 
-    <label class="control-label"><i class="fa fa-play"></i></label>
+    <label class="control-label"><i class="fa fa-play blu"></i></label>
     <div class="controls">
       <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.starttime"/>
     </div>
   </div>
 
-  <h4>
-    <label class="checkbox">
+  <h4 class="blu">
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
-    Specify day working time (pause on night)</label>
+    Specify day working time (pause on night)
   </h4>
   <div class="row-fluid">
-    <div class="span1"><i class="fa fa-sun-o fa-2x right"></i></div>
+    <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
     <div class="span3">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
-    <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right"></i></div>
+    <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right blu"></i></div>
     <div class="span3">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
