--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -16,7 +16,7 @@
     </div>
   </div>
 
-  <h4 class="blu">
+  <h4>
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
     Specify day working time (pause on night)
   </h4>
@@ -32,22 +32,19 @@
   </div>
 
 
-  <h4><i class="fa fa-telegram"></i> Telegram messages</h4>
-  <div class="control-group">
-    <div class="controls">
-      <label class="checkbox">
-      <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
-      Enable telegram messaging</label>
+  <h4>
+    <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
+    Enable Telegram messaging<i class="fa fa-telegram blue"></i>
+  </h4>
+  <div class="row-fluid">
+    <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
+    <div class="span3">
+      <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
 
-    <label class="control-label"><i class="fa fa-key"></i></label>
-    <div class="controls">
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
-    </div>
-
-    <label class="control-label"><i class="fa fa-user-o"></i></label>
-    <div class="controls">
-      <input type="text" class="input-block-level" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
+    <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
+    <div class="span3">
+      <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
     </div>
   </div>
 
