--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -43,12 +43,15 @@
   <div class="row-fluid">
 
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
-    <div class="span3">
+    <div class="span5">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
 
+  </div>
+  <div class="row-fluid">
+
     <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
-    <div class="span3">
+    <div class="span2">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
     </div>
 
