--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -37,7 +37,7 @@
 
   <label class="checkbox">
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
-    Enable Telegram messaging<i class="fa fa-telegram blue"></i>
+    Enable Telegram messaging <i class="fa fa-telegram fa-2x blue"></i>
   </label>
 
   <div class="row-fluid">
