--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -20,7 +20,7 @@
     Specify day working time (pause on night)
   </label>
 
-  <div class="row-fluid">
+  <div class="row-fluid jobscheduler">
 
     <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
     <div class="span3">
@@ -37,20 +37,17 @@
 
   <label class="checkbox">
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
-    Enable Telegram messaging <i class="fa fa-telegram fa-2x blue"></i>
+    Enable Telegram messaging <i class="fa fa-telegram blu"></i>
   </label>
 
-  <div class="row-fluid">
+  <div class="row-fluid jobscheduler">
 
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
-    <div class="span5">
+    <div class="span9">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
 
-  </div>
-  <div class="row-fluid">
-
-    <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
+    <div class="offset2 span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
     <div class="span2">
       <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
     </div>
