--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -44,7 +44,7 @@
 
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
     <div class="span9">
-      <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+      <input type="text"  class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
 
     <div class="offset2 span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
