--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -43,14 +43,11 @@
   <div class="row-fluid jobscheduler">
 
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
-    <div class="span9">
-      <input type="text"  class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
-    </div>
+    <input type="text" class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+    <div class="span2">button</div>
 
-    <div class="offset2 span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
-    <div class="span2">
-      <input type="text" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
-    </div>
+    <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
+    <input type="text" class="span2" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
 
   </div>
 
