--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -8,7 +8,9 @@
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-play fa-2x right blu"></i></div>
-    <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.starttime">
+    <div>
+      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.starttime">
+    </div>
   </div>
 
   <label class="checkbox">
@@ -17,9 +19,13 @@
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
-    <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pauseday">
+    <div>
+      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pauseday">
+    </div>
     <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right blu"></i></div>
-    <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pausenight">
+    <div>
+      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pausenight">
+    </div>
   </div>
 
 
@@ -29,9 +35,13 @@
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
-    <input type="text" class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+    <div>
+      <input type="text" class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+    </div>
     <div class="offset2 span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
-    <input type="text" class="span2" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
+    <div>
+      <input type="text" class="span2" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
+    </div>
   </div>
 
 </form>
