--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -8,7 +8,7 @@
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-play fa-2x right blu"></i></div>
-    <div>
+    <div class="span3">
       <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.starttime">
     </div>
   </div>
@@ -19,11 +19,11 @@
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
-    <div>
+    <div class="span3">
       <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
     <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right blu"></i></div>
-    <div>
+    <div class="span3">
       <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
   </div>
@@ -35,12 +35,12 @@
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
-    <div>
+    <div class="span9">
       <input type="text" class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
     <div class="offset2 span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
-    <div>
-      <input type="text" class="span2" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
+    <div class="span3">
+      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
     </div>
   </div>
 
