--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -9,7 +9,7 @@
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-play fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.starttime">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.starttime">
     </div>
   </div>
 
@@ -20,11 +20,11 @@
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pauseday">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pauseday">
     </div>
     <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.pausenight">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pausenight">
     </div>
   </div>
 
@@ -36,11 +36,14 @@
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
     <div class="span9">
-      <input type="text" class="span9" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
-    <div class="offset2 span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
+    <div class="span2"></div>
+  </div>
+  <div class="row-fluid">
+    <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span3" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
     </div>
   </div>
 
