--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -7,6 +7,7 @@
     Scheduled print start
   </label>
   <div class="row-fluid jobscheduler">
+    <div class="span1"></div>
     <div class="span1"><i class="fa fa-play fa-2x right blu"></i></div>
     <div class="span3">
       <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.starttime">
@@ -18,6 +19,7 @@
     Specify day working time (pause on night)
   </label>
   <div class="row-fluid jobscheduler">
+    <div class="span1"></div>
     <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
     <div class="span3">
       <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pauseday">
@@ -34,11 +36,14 @@
     Enable Telegram messaging <i class="fa fa-telegram blu"></i>
   </label>
   <div class="row-fluid jobscheduler">
+    <div class="span1"></div>
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
     <div class="span9">
       <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
     </div>
-    <div class="span2"></div>
+    <div class="span1">
+      <button type="button" class="btn btn-primary">Test</button>
+    </div>
   </div>
   <div class="row-fluid">
     <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
