--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -28,7 +28,6 @@
     </div>
   </div>
 
-
   <label class="checkbox">
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
     Enable Telegram messaging <i class="fa fa-telegram blu"></i>
@@ -41,6 +40,7 @@
     <div class="span1">
       <button type="button" class="btn btn-primary">Test</button>
     </div>
+    <div class="span1"> </div>
     <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
     <div class="span3">
       <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
