--- a/jobscheduler/templates/jobscheduler_navbar.jinja2
+++ b/jobscheduler/templates/jobscheduler_navbar.jinja2
@@ -1,3 +1,1 @@
-<!--
-<a href="#" data-bind="attr: {href: settings.settings.plugins.jobscheduler.url}" target="foto"><i class="fa fa-camera"></i></a>
--->
+<a href="#" data-bind="attr: {href: settings.settings.plugins.jobscheduler.url}" target="foto"><i class="fa fa-calendar"></i></a>
