--- a/jobscheduler/templates/jobscheduler_settings.jinja2
+++ b/jobscheduler/templates/jobscheduler_settings.jinja2
@@ -9,41 +9,52 @@
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-play fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.starttime">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.starttime"/>
     </div>
   </div>
+<!--
+  <div class="row-fluid jobscheduler">
+    <div class="span4">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.location" readonly/>
+    </div>
+    <div class="span8">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.filename" readonly/>
+    </div>
+  </div>
+-->
 
-  <label class="checkbox">
+  <label class="checkbox jobscheduler">
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.pauseenabled"/>
     Specify day working time (pause on night)
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-sun-o fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pauseday">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pauseday"/>
     </div>
     <div class="offset2 span1"><i class="fa fa-moon-o fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pausenight">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.pausenight"/>
     </div>
   </div>
 
-  <label class="checkbox">
+  <label class="checkbox jobscheduler">
     <input type="checkbox" data-bind="checked: settings.plugins.jobscheduler.telegramenabled"/>
     Enable Telegram messaging <i class="fa fa-telegram blu"></i>
   </label>
   <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-key fa-2x right blu"></i></div>
     <div class="span9">
-      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramtoken">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramtoken"/>
     </div>
     <div class="span1">
-      <button type="button" class="btn btn-primary">Test</button>
+      <button type="button" class="btn btn-primary" id="jobscheduler_telegram_test">Test</button>
     </div>
-    <div class="span1"> </div>
+  </div>
+  <div class="row-fluid jobscheduler">
     <div class="span1"><i class="fa fa-user-o fa-2x right blu"></i></div>
     <div class="span3">
-      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramchatid">
+      <input type="text" class="span12" data-bind="value: settings.plugins.jobscheduler.telegramchatid"/>
     </div>
   </div>
 
